Fix redeem page to look good on mobile devices

--- a/WebContent/resources/css/localcoop.css
+++ b/WebContent/resources/css/localcoop.css
@@ -4,6 +4,11 @@ img {
     width: auto\9; /* ie8 */
 }
 
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
 .eggImg  { 
   width:284px; 
   height:368px; 
@@ -21,7 +26,7 @@ img {
   display: table; 
 }
   
-.eggText h3 { 
+.eggText h4 { 
   display: table-row; 
   vertical-align: middle; 
   text-align: center; 
@@ -31,23 +36,6 @@ img {
   display: table-row; 
   vertical-align: middle; 
   text-align: center; 
-}
-
-/* Setting style for links */
-a:link {
-  color:#000000;
-}
-
-a:visited {
-  color:#000000;
-}  
-
-a:hover {
-  color:#000000;
-}  
-
-a:active {
-  color:#000000;
 }
 
 /* Do we really need these? */
